A espera de Login y Diseño

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encriptadas</title>
+    <title>Inicio</title>
 </head>
 <body>
-    <script src="../scripts/scriptEncriptadas.js"></script>
-    <p id = 'respuesta'></p>
+    <a href="mostrarFrasesCodificadasS.html"><button>Super Usuario</button></a>
+    <a href="mostrarFrasesCodificadas.html"><button>Usuario</button></a>
 </body>
 </html>
