--- a/web/pages/mostrarFrasesCodificadasS.html
+++ b/web/pages/mostrarFrasesCodificadasS.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id = "table-container"></div>
-    <script src = "../scripts/scriptFrasesDecodificadas.js"></script> 
+    <script src = "../scripts/scriptFrasesCodificadas.js"></script> 
+    <a href="fraseSecreta.html"><button>Ingresar frase secreta</button></a>
+    <a href="mostrarFrasesSecretas.html"><button>Seleccionar frase secreta</button></a>
 </body>
 </html>
