--- a/web/pages/fraseNormal.html
+++ b/web/pages/fraseNormal.html
@@ -9,8 +9,8 @@
 <body>
     <form id = "fraseNormal">
         <label for="frase">Ingrese frase a codificar</label><br>
-        <input id="frase" type="text" placeholder="Claudio"><br>
-        <button>Enviar</button> 
+        <input id="frase" type="text" placeholder="Frase a codificar"><br>
+        <button>Enviar</button>
     </form>
     <script src = "../scripts/scriptNormal.js"></script> 
 </body>
