--- a/web/pages/mostrarFraseCodificadaS.html
+++ b/web/pages/mostrarFraseCodificadaS.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id = "table-container"></div>
-    <script src = "../scripts/scriptFrasesCodificadas.js"></script> 
-    <a href="mostrarFrasesSecretas.html"><button>Codificar Frases</button></a>
+    La frase codificada es:
+    <script src="../scripts/scriptFraseCodificada.js"></script>
+    <div id="frase"></div>
+    <a href="mostrarFrasesCodificadasS.html"><button>Ver frases codificadas</button></a>
 </body>
 </html>
