--- a/web/pages/mostrarFrasesSecretas.html
+++ b/web/pages/mostrarFrasesSecretas.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encriptadas</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="../scripts/scriptDesencriptadas.js"></script>
-    <p id = 'respuesta'></p>
+    <div id = "table-container"></div>
+    <script src = "../scripts/scriptFrasesSecretas.js"></script> 
 </body>
 </html>
