--- a/web/pages/mostrarFrasesCodificadasS.html
+++ b/web/pages/mostrarFrasesCodificadasS.html
@@ -11,5 +11,6 @@
     <script src = "../scripts/scriptFrasesCodificadas.js"></script> 
     <a href="fraseSecreta.html"><button>Ingresar frase secreta</button></a>
     <a href="mostrarFrasesSecretas.html"><button>Seleccionar frase secreta</button></a>
+    <a href="selFrasesCodificadas.html"><button>Desencriptar frase</button></a>
 </body>
 </html>
