--- a/web/pages/SuperUsuario/fraseNormalS.html
+++ b/web/pages/SuperUsuario/fraseNormalS.html
@@ -12,6 +12,6 @@
         <input id="frase" type="text" placeholder="Frase a codificar"><br>
         <button>Enviar</button>
     </form>
-    <script src = "../scripts/scriptNormal.js"></script> 
+    <script src = "../../scripts/scriptNormalS.js"></script> 
 </body>
 </html>
