--- a/web/pages/SuperUsuario/mostrarFraseDecodificadaS.html
+++ b/web/pages/SuperUsuario/mostrarFraseDecodificadaS.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    La frase codificada es:
-    <script src="../scripts/scriptFraseCodificada.js"></script>
+    La frase decodificada es:
+    <script src="../../scripts/scriptFraseDecodificada.js"></script>
     <div id="frase"></div>
-    <a href="mostrarFrasesCodificadas.html"><button>Ver frases codificadas</button></a>
+    <a href="mostrarFrasesCodificadasS.html"><button>Ver frases codificadas</button></a>
 </body>
 </html>
