--- a/web/pages/SuperUsuario/mostrarFrasesSecretasS.html
+++ b/web/pages/SuperUsuario/mostrarFrasesSecretasS.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id = "table-container"></div>
-    <script src = "../scripts/scriptSelFrasesCodificadas.js"></script> 
+    <script src = "../../scripts/scriptFrasesSecretasS.js"></script> 
 </body>
 </html>
