--- a/web/pages/Usuario/mostrarFraseDecodificada.html
+++ b/web/pages/Usuario/mostrarFraseDecodificada.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     La frase decodificada es:
-    <script src="../scripts/scriptFraseDecodificada.js"></script>
+    <script src="../../scripts/scriptFraseDecodificada.js"></script>
     <div id="frase"></div>
-    <a href="mostrarFrasesCodificadasS.html"><button>Ver frases codificadas</button></a>
+    <a href="mostrarFrasesCodificadas.html"><button>Ver frases codificadas</button></a>
 </body>
 </html>
