--- a/web/pages/Usuario/mostrarFrasesSecretas.html
+++ b/web/pages/Usuario/mostrarFrasesSecretas.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id = "table-container"></div>
-    <script src = "../scripts/scriptSelFrasesCodificadasS.js"></script> 
+    <script src = "../../scripts/scriptFrasesSecretas.js"></script> 
 </body>
 </html>
