--- a/web/pages/Usuario/selFrasesSecretas.html
+++ b/web/pages/Usuario/selFrasesSecretas.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    La frase decodificada es:
-    <script src="../scripts/scriptFraseDecodificada.js"></script>
-    <div id="frase"></div>
-    <a href="mostrarFrasesCodificadas.html"><button>Ver frases codificadas</button></a>
+    <div id = "table-container"></div>
+    <script src = "../../scripts/scriptSelFrasesSecretas.js"></script> 
 </body>
 </html>
