--- a/web/pages/SuperUsuario/selFrasesCodificadasS.html
+++ b/web/pages/SuperUsuario/selFrasesCodificadasS.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    La frase codificada es:
-    <script src="../scripts/scriptFraseCodificada.js"></script>
-    <div id="frase"></div>
-    <a href="mostrarFrasesCodificadasS.html"><button>Ver frases codificadas</button></a>
+    <div id = "table-container"></div>
+    <script src = "../../scripts/scriptSelFrasesCodificadasS.js"></script> 
 </body>
 </html>
