--- a/web/pages/Usuario/mostrarFraseCodificada.html
+++ b/web/pages/Usuario/mostrarFraseCodificada.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id = "table-container"></div>
-    <script src = "../scripts/scriptSelFrasesSecretas.js"></script> 
+    La frase codificada es:
+    <script src="../../scripts/scriptFraseCodificada.js"></script>
+    <div id="frase"></div>
+    <a href="mostrarFrasesCodificadas.html"><button>Ver frases codificadas</button></a>
 </body>
 </html>
