--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <a href="SuperUsuario/mostrarFrasesCodificadasS.html"><button>Super Usuario</button></a>
+    <a href="SuperUsuario/login.html"><button>Super Usuario</button></a>
     <a href="Usuario/mostrarFrasesCodificadas.html"><button>Usuario</button></a>
 
 </body>
